'Add new report' button added (Reports.cshtml)

--- a/CIS2055 - Nemesys/CIS2055 - Nemesys/Views/Reports/Reports.cshtml
+++ b/CIS2055 - Nemesys/CIS2055 - Nemesys/Views/Reports/Reports.cshtml
@@ -17,4 +17,6 @@
     }
     
     </ul>
+    
+    <a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="ReportForm">Add new report</a>
 </div>
