--- a/CIS2055 - Nemesys/CIS2055 - Nemesys/Views/Reports/ReportForm.cshtml
+++ b/CIS2055 - Nemesys/CIS2055 - Nemesys/Views/Reports/ReportForm.cshtml
@@ -1,9 +1,20 @@
-﻿@{
+﻿@model CIS2055___Nemesys.Models.Documents.Report
+@{
     ViewData["Title"] = "Reports";
 }
 @* <h1>@ViewData["Title"]</h1> *@
 
 <h2>Nemesys reports</h2>
+
+@Html.BeginForm("AddNewReport", "Reports", FormMethod.Post) {
+    @Html.TextBoxFor(m => m.Location, new {placeholder = "Location"});
+    @Html.TextBoxFor(m => m.Desc, new {placeholder = "Description"});
+    @Html.TextBoxFor(m => m.Reporter_Email, new {placeholder = "Email"});
+    @Html.GetEnumSelectList(typeof(HazardType));
+    <input type="submit" value="Submit"/>
+}
+
+
 
 <form action="">
     <input name="location" type="text" placeholder="location">
