New view added (`Investigations`) to Investigations controller

--- a/CIS2055 - Nemesys/CIS2055 - Nemesys/Views/Shared/_Layout.cshtml
+++ b/CIS2055 - Nemesys/CIS2055 - Nemesys/Views/Shared/_Layout.cshtml
@@ -22,7 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reports">Reports</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="Reports">Reports</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Investigations" asp-action="Investigations">Investigations</a>
                         </li>
                     </ul>
                 </div>
