--- a/CIS2055 - Nemesys/CIS2055 - Nemesys/Views/Shared/_Layout.cshtml
+++ b/CIS2055 - Nemesys/CIS2055 - Nemesys/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Investigations" asp-action="Investigations">Investigations</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial"/>
                 </div>
             </div>
         </nav>
