--- a/CIS2055 - Nemesys/CIS2055 - Nemesys/Views/Reports/Reports.cshtml
+++ b/CIS2055 - Nemesys/CIS2055 - Nemesys/Views/Reports/Reports.cshtml
@@ -7,22 +7,26 @@
 <a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="Create">Add new report</a>
 
 <table class="content-table">
-    <tr>
-        <th>Title</th>
-        <th>Status</th>
-        <th>Location</th>
-        <th>Description</th>
-        <th></th>
-    </tr>
-    @foreach(var report in Model)
-    {
+    <thead>
         <tr>
-            <td>@report.Title</td>
-            <td>@report._status</td>
-            <td>@report.Location</td>
-            <td>@report.Desc</td>
-            <td><a asp-controller="Reports" asp-action="Expand" asp-route-rrn="@report.RRN">Expand</a></td>
+            <th>Title</th>
+            <th>Status</th>
+            <th>Location</th>
+            <th>Description</th>
+            <th></th>
         </tr>
+    </thead>
+    <tbody>
+        @foreach (var report in Model)
+        {
+            <tr>
+                <td>@report.Title</td>
+                <td>@report._status</td>
+                <td>@report.Location</td>
+                <td>@report.Desc</td>
+                <td><a asp-controller="Reports" asp-action="Expand" asp-route-rrn="@report.RRN">Expand</a></td>
+            </tr>
 
-    }
+        }
+    </tbody>
 </table>
